# emma-editor

./: .gitignore  Cargo.toml  LOG.md  Makefile  README.md  check.py  cycle_client  graphemes.txt  relm.md  run_tests  scroll  slow3.c  slow4.c
.cargo/: config.toml
.github/workflows/: ci.yaml
app/: Cargo.toml
app/src/: action.rs  buffer.rs  command_line.rs  command_line_widget.rs  emma.theme.yml  key.rs  key_map.rs  key_sequence.rs  lib.rs  message.rs  overlay.rs  pane_tree.rs  path_chooser.rs  process.rs  rope.rs  search_widget.rs  shell.rs  state.rs  widget.rs
app/src/state/: event.rs  persistence.rs
doc/: arch.md  gtk.md  syntax.md
gtk_shell/: Cargo.toml
gtk_shell/src/: app.rs  draw.rs  init.rs  key.rs  main.rs
gtk_shell/src/app/: draw.rs  event.rs
src/: app.rs  buffer.rs  comm.rs  config.rs  draw.rs  emma.theme.yml  grapheme.rs  highlight.rs  key.rs  key_map.rs  key_sequence.rs  main.rs  offset.rs  open_file.rs  overlay.rs  pane_tree.rs  path_chooser.rs  rope.rs  search_widget.rs  shell.rs  theme.rs  util.rs  widget.rs
src/app/: draw.rs  event.rs  persistence.rs
tests/: embassy_test.rs
