[package]
name = "emma"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.0"
anyhow = "1.0.58"
dirs = "6.0.0"
fs-err = "3.0.0"
gtk4 = "0.9.5"
nix = { version = "0.29.0", features = ["term"] }
once_cell = "1.13.0"
pangocairo = "0.20.7"
rand = "0.8.5"
ropey = "1.5.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.34"
syntect = "5.0.0"
thiserror = "2.0.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", default-features = false, features = ["env-filter", "fmt"] }
unicode-segmentation = "1.9.0"

[dev-dependencies]
tempfile = "3.3.0"

[profile.dev.package."*"]
opt-level = 3
