[workspace]
members = ["app", "gtk_shell"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
aho-corasick = "1.1.0"
anyhow = { version = "1.0.58", features = ["backtrace"] }
dirs = "6.0.0"
emma_app = { path = "app" }
fs-err = "3.0.0"
glob = "0.3.2"
nix = { version = "0.30.0", features = ["term"] }
once_cell = "1.13.0"
rand = "0.9.0"
ropey = "1.5.0"
gtk4 = "0.10.0"
pangocairo = "0.21.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tracing-subscriber = { version = "0.3.14", default-features = false, features = ["env-filter", "fmt"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.34"
shlex = "1.3.0"
syntect = "5.0.0"
tempfile = "3.3.0"
thiserror = "2.0.0"
tracing = "0.1.35"
unicode-segmentation = "1.9.0"

[profile.dev.package."*"]
opt-level = 3
