[package]
name = "emma_app"
version.workspace = true
edition.workspace = true

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
dirs.workspace = true
fs-err.workspace = true
glob.workspace = true
nix.workspace = true
once_cell.workspace = true
rand.workspace = true
ropey.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shlex.workspace = true
syntect.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
tempfile.workspace = true
