[package]
name = "emma_gtk_shell"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
emma_app.workspace = true
fs-err.workspace = true
gtk4.workspace = true
pangocairo.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
syntect.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
