[package]
name = "emma_gtk_shell"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
emma_app.workspace = true
gtk4.workspace = true
pangocairo.workspace = true
syntect.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
